[package]
name = "rpc_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14.26", features = ["server"] }
serde = "1.0"
serde_json = "1.0"
http = "0.2"
dotenv = "0.15.0"
url = "2.2.2"
futures = "0.3.28"
bytes = "1.4.0"
